[tool.poetry]
name = "repl_python3_poketwo-autocatcher-1"
version = "0.1.0"
description = ""
authors = ["faizannoushad <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
discord = "^1.7.3"
discum = "^1.4.0"
DateTime = "^4.3"
aiohttp = "3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
